--- a/deepdive-quarkus/templates/service.yaml
+++ b/deepdive-quarkus/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "quarkus-deepdive.fullname" . }}
+  name: {{ include "deepdive-quarkus.fullname" . }}
   labels:
-    {{- include "quarkus-deepdive.labels" . | nindent 4 }}
+    {{- include "deepdive-quarkus.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "quarkus-deepdive.selectorLabels" . | nindent 4 }}
+    {{- include "deepdive-quarkus.selectorLabels" . | nindent 4 }}
