--- a/deepdive-quarkus/templates/serviceaccount.yaml
+++ b/deepdive-quarkus/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "quarkus-deepdive.serviceAccountName" . }}
+  name: {{ include "deepdive-quarkus.serviceAccountName" . }}
   labels:
-    {{- include "quarkus-deepdive.labels" . | nindent 4 }}
+    {{- include "deepdive-quarkus.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
