--- a/deepdive-quarkus/templates/tests/test-connection.yaml
+++ b/deepdive-quarkus/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "quarkus-deepdive.fullname" . }}-test-connection"
+  name: "{{ include "deepdive-quarkus.fullname" . }}-test-connection"
   labels:
-    {{- include "quarkus-deepdive.labels" . | nindent 4 }}
+    {{- include "deepdive-quarkus.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "quarkus-deepdive.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "deepdive-quarkus.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
